Fixed table alignment on chrome

--- a/css/interface.css
+++ b/css/interface.css
@@ -68,12 +68,18 @@ border-radius: 12px;
     right:0;                         
 }
 
+.progress-parent {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
 .progress-text {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    z-index: 99 !important;
+    z-index: 10 !important;
 }
 
 select {
